# ollama3.2-3b

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  docker-compose_server.yml  logging.conf  pyproject.toml  settings.yaml
backend/: .dockerignore  Dockerfile.backend  build_pyc.py  clean_pyc.py
backend/backend_app/: config.py  constants.py  di.py  main.py  settings.yaml
backend/backend_app/api/: api_router.py
backend/backend_app/api/Embedding/: embedding_component.py
backend/backend_app/api/LLM/: context_filter.py  llm_component.py  node_store_component.py  vector_store_component.py
backend/backend_app/api/ingest/: ingest_component.py  ingest_helper.py
backend/backend_app/api/llm_api/: llm_model.py
backend/backend_app/api/llm_api/chat/: chat_completions.py  chat_server.py
backend/backend_app/api/llm_api/chunks/: chunks_router.py  chunks_service.py
backend/backend_app/api/llm_api/ingest/: ingest_router.py  ingest_service.py  ingest_service_kg_rag.py  model.py
backend/backend_app/api/llm_api/meta/: meta_router.py
backend/backend_app/api/settings/: settings.py  settings_load.py  yaml.py
backend/backend_app/api/tools/: common.py  developer_private_key.pem  generate_code.py  redis_service.py  user_public.pem  user_public_key.pem
backend/backend_app/api/utils/: pull_ollama_model.py
electron_app/: Dockerfile.frontend  index.html  main.js  package-lock.json  package.json  tailwind.config.js  vite.config.js
electron_app/src/: App.vue  main.js
electron_app/src/components/: ActivationCodeModal.vue  ChatList.vue  Footer.vue  Header.vue  HistoryList.vue  KnowledgeBaseModal.vue  Sidebar.vue
electron_app/src/hook/: useCode.ts
electron_app/src/stores/: appStore.ts
electron_app/src/types/: index.ts
electron_app/src/views/: ChatView.vue  ImageView.vue  VideoView.vue  VoiceView.vue
frontend/: index.html
scripts/: ingest_folder.py  utils.py
src/: .dockerignore  Dockerfile.backend
src/app/: config.py  constants.py  di.py  main.py
src/app/api/: api_router.py
src/app/api/Embedding/: embedding_component.py
src/app/api/LLM/: llm_component.py  node_store_component.py  vector_store_component.py
src/app/api/ingest/: ingest_component.py  ingest_helper.py
src/app/api/llm_api/: llm_model.py
src/app/api/llm_api/chat/: chat_completions.py  chat_server.py
src/app/api/llm_api/chunks/: chunks_router.py  chunks_service.py
src/app/api/llm_api/ingest/: ingest_router.py  (+1 more)
src/app/api/settings/: settings.py  settings_load.py
src/app/api/utils/: pull_ollama_model.py
